--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,8 +10,16 @@
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
+    "@types/react-helmet": "^6.1.0",
+    "@types/react-router-dom": "^5.1.5",
+    "axios": "^0.20.0",
+    "feather-icons": "^4.28.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-favicon": "^0.0.18",
+    "react-helmet": "^6.1.0",
+    "react-icons": "^3.11.0",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
     "typescript": "~3.7.2"
   },
