--- a/backend/package.json
+++ b/backend/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "backend",
+  "name": "bms-nest",
   "version": "0.0.1",
   "description": "",
   "author": "",
@@ -25,8 +25,7 @@
     "@nestjs/core": "^7.0.0",
     "@nestjs/mongoose": "^7.0.2",
     "@nestjs/platform-express": "^7.0.0",
-    "@types/mongoose": "^5.7.36",
-    "mongoose": "^5.10.7",
+    "mongoose": "^5.10.5",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^6.5.4"
@@ -36,21 +35,21 @@
     "@nestjs/schematics": "^7.0.0",
     "@nestjs/testing": "^7.0.0",
     "@types/express": "^4.17.3",
-    "@types/jest": "26.0.10",
+    "@types/jest": "25.2.3",
+    "@types/mongoose": "^5.7.36",
     "@types/node": "^13.9.1",
     "@types/supertest": "^2.0.8",
-    "@typescript-eslint/eslint-plugin": "3.9.1",
-    "@typescript-eslint/parser": "3.9.1",
-    "eslint": "7.7.0",
+    "@typescript-eslint/eslint-plugin": "3.0.2",
+    "@typescript-eslint/parser": "3.0.2",
+    "eslint": "7.1.0",
     "eslint-config-prettier": "^6.10.0",
     "eslint-plugin-import": "^2.20.1",
-    "eslint-plugin-nestjs": "^1.2.3",
-    "jest": "26.4.2",
+    "jest": "26.0.1",
     "prettier": "^1.19.1",
     "supertest": "^4.0.2",
-    "ts-jest": "26.2.0",
+    "ts-jest": "26.1.0",
     "ts-loader": "^6.2.1",
-    "ts-node": "9.0.0",
+    "ts-node": "^8.6.2",
     "tsconfig-paths": "^3.9.0",
     "typescript": "^3.7.4"
   },
