--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
     "react-dom": "^16.13.1",
     "react-favicon": "^0.0.18",
     "react-helmet": "^6.1.0",
+    "react-hook-form": "^6.8.6",
     "react-icons": "^3.11.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
