--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
     "@types/react-dom": "^16.9.0",
     "@types/react-helmet": "^6.1.0",
     "@types/react-router-dom": "^5.1.5",
+    "@types/react-select": "^3.0.21",
     "axios": "^0.20.0",
     "feather-icons": "^4.28.0",
     "react": "^16.13.1",
@@ -22,6 +23,7 @@
     "react-icons": "^3.11.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
+    "react-select": "^3.1.0",
     "typescript": "~3.7.2"
   },
   "scripts": {
@@ -49,7 +51,7 @@
     "@typescript-eslint/eslint-plugin": "^4.3.0",
     "@typescript-eslint/parser": "^4.3.0",
     "babel-eslint": "^10.1.0",
-    "eslint": "^7.10.0",
+    "eslint": "^6.6.0",
     "eslint-config-airbnb": "^18.2.0",
     "eslint-config-prettier": "^6.12.0",
     "eslint-plugin-import": "^2.22.1",
